# discord_noti

./: .dockerignore  Dockerfile  package-lock.json  package.json  readme.md  webpack.config.js
browser/: .env.example  .gitignore  Dockerfile  config.yaml  config.yaml.dev  config.yaml.test  main.py  nginx.conf  pyproject.toml  readme.md
browser/scripts/: common.js
js/: .gitignore  package-lock.json  package.json  webpack.config.js
js/src/: App.tsx  content.ts
src/: background.ts  content.ts  models.ts
